# Sistema-Cifrario

./: .gitignore  README.md  db.sqlite3
Backend/: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
Backend/cifrario/: asgi.py  exceptions.py  urls.py  wsgi.py
Backend/cifrario/config/: env.py
Backend/cifrario/config/django/: base.py  local.py  prod.py
Backend/correos/: admin.py  models.py  send_mail.py
Backend/estudiantes/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
Backend/institucion/: admin.py  models.py
Backend/institucion/management/commands/: crear_institucion.py
Backend/serviciosocial/: admin.py  apps.py  models.py  serializers.py  signals.py
Backend/static/css/: jazzmin_custom.css
Backend/supervisores/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
Backend/templates/correos/credenciales/: credenciales_estudiante.html
Backend/templates/correos/notificaciones/: notificacion_asignacion_servicio_social_estudiante.html  notificacion_asignacion_servicio_social_supervisor.html
Backend/usuarios/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
Backend/utils/: generate_user.py
frontend/: index.html
frontend/src/components/: index.js
frontend/src/hooks/: useAuth.js
frontend/src/layouts/: EstudianteLayout.jsx  SupervisorLayout.jsx
frontend/src/pages/: NotFound.jsx
frontend/src/routes/: AppRouter.jsx  EstudianteRoutes.jsx  PrivateRoute.jsx  RoleProtectedRoute.jsx  SupervisorRoutes.jsx
frontend/src/services/: Api.js
(+7 files in other folders)
